# cloudflare-worker-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wrangler.toml
.github/workflows/: wrangler.yml
src/: lib.rs
