[package]
name = "example-worker-rust"
version = "0.1.0"
publish = false
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
html-escape = "0.2.13"
worker = "0.6"

[profile.release]
lto = true
strip = true
codegen-units = 1
